Update qwen base model links

--- a/docs/getting-started/models.mdx
+++ b/docs/getting-started/models.mdx
@@ -121,25 +121,23 @@ Fortunately, the vast majority of models meet these requirements. If you're curi
 <Tabs>
   <Tab title="Qwen">
     <div className="full-width">
-| Model    | Variant                                                  | License      |
-| -------- | -------------------------------------------------------- | ------------ |
-| Qwen 3   | [0.6 B](https://huggingface.co/Qwen/Qwen3-0.6B)          | Apache-2.0   |
-|          | [1.7 B](https://huggingface.co/Qwen/Qwen3-1.7B)          | Apache-2.0   |
-|          | [4 B](https://huggingface.co/Qwen/Qwen3-4B)              | Apache-2.0   |
-|          | [8 B](https://huggingface.co/Qwen/Qwen3-8B)              | Apache-2.0   |
-|          | [14 B](https://huggingface.co/Qwen/Qwen3-14B)            | Apache-2.0   |
-|          | [30B-A3B](https://huggingface.co/Qwen/Qwen3-30B-A3B)     | Apache-2.0   |
-|          | [32 B](https://huggingface.co/Qwen/Qwen3-32B)            | Apache-2.0   |
-|          | [235B-A22B](https://huggingface.co/Qwen/Qwen3-235B-A22B) | Apache-2.0   |
-| Qwen 2.5 | [0.5 B](https://huggingface.co/Qwen/Qwen2.5-0.5B)        | Apache-2.0   |
-|          | [1.5 B](https://huggingface.co/Qwen/Qwen2.5-1.5B)        | Apache-2.0   |
-|          | [3 B](https://huggingface.co/Qwen/Qwen2.5-3B)            | Apache-2.0   |
-|          | [7 B](https://huggingface.co/Qwen/Qwen2.5-7B)            | Apache-2.0   |
-|          | [14 B](https://huggingface.co/Qwen/Qwen2.5-14B)          | Apache-2.0   |
-|          | [32 B](https://huggingface.co/Qwen/Qwen2.5-32B)          | Apache-2.0   |
-|          | [72 B](https://huggingface.co/Qwen/Qwen2.5-72B)          | Qwen License |
-| Qwen 2   | [1.5 B](https://huggingface.co/Qwen/Qwen2-1.5B)          | Apache-2.0   |
-|          | [7 B](https://huggingface.co/Qwen/Qwen2-7B)              | Apache-2.0   |
+| Model | Variant | License |
+| ----- | ----------------------------- | ------- |
+| Qwen 3 | [0.6 B-Base](https://huggingface.co/Qwen/Qwen3-0.6B-Base) | Apache-2.0 |
+|       | [1.7 B-Base](https://huggingface.co/Qwen/Qwen3-1.7B-Base) | Apache-2.0 |
+|       | [4 B-Base](https://huggingface.co/Qwen/Qwen3-4B-Base)     | Apache-2.0 |
+|       | [8 B-Base](https://huggingface.co/Qwen/Qwen3-8B-Base)     | Apache-2.0 |
+|       | [14 B-Base](https://huggingface.co/Qwen/Qwen3-14B-Base)   | Apache-2.0 |
+|       | [30B-A3B-Base](https://huggingface.co/Qwen/Qwen3-30B-A3B-Base) | Apache-2.0 |
+| Qwen 2.5 | [0.5 B](https://huggingface.co/Qwen/Qwen2.5-0.5B) | Apache-2.0 |
+|         | [1.5 B](https://huggingface.co/Qwen/Qwen2.5-1.5B) | Apache-2.0 |
+|         | [3 B](https://huggingface.co/Qwen/Qwen2.5-3B)     | Apache-2.0 |
+|         | [7 B](https://huggingface.co/Qwen/Qwen2.5-7B)     | Apache-2.0 |
+|         | [14 B](https://huggingface.co/Qwen/Qwen2.5-14B)   | Apache-2.0 |
+|         | [32 B](https://huggingface.co/Qwen/Qwen2.5-32B)   | Apache-2.0 |
+|         | [72 B](https://huggingface.co/Qwen/Qwen2.5-72B)   | Qwen License |
+| Qwen 2   | [1.5 B](https://huggingface.co/Qwen/Qwen2-1.5B)  | Apache-2.0 |
+|         | [7 B](https://huggingface.co/Qwen/Qwen2-7B)       | Apache-2.0 |
 
     </div>
 
