Start with Gemma

--- a/docs/getting-started/models.mdx
+++ b/docs/getting-started/models.mdx
@@ -12,9 +12,26 @@ ART supports a wide variety of base models, with two constraining factors:
 
 Fortunately, the vast majority of models meet these requirements. If you're curious about a model that is not listed below, ask in the Discord #support channel.
 
-## Instruct-tuned models
+## Instruct models
 
 <Tabs>
+  <Tab title="Gemma">
+    <div className="full-width">
+| Model    | Variant                                           | License |
+| -------- | ------------------------------------------------- | ------- |
+| Gemma 3n | [E2B](https://huggingface.co/google/gemma-3n-E2B) | gemma   |
+|          | [E4B](https://huggingface.co/google/gemma-3n-E4B) | gemma   |
+| Gemma 3  | [1 B](https://huggingface.co/google/gemma-3-1b)   | gemma   |
+|          | [4 B](https://huggingface.co/google/gemma-3-4b)   | gemma   |
+|          | [12 B](https://huggingface.co/google/gemma-3-12b) | gemma   |
+|          | [27 B](https://huggingface.co/google/gemma-3-27b) | gemma   |
+| Gemma 2  | [2 B](https://huggingface.co/google/gemma-2-2b)   | gemma   |
+|          | [9 B](https://huggingface.co/google/gemma-2-9b)   | gemma   |
+|          | [27 B](https://huggingface.co/google/gemma-2-27b) | gemma   |
+
+    </div>
+
+  </Tab>
   <Tab title="Qwen">
     <div className="full-width">
 
@@ -84,23 +101,7 @@ Fortunately, the vast majority of models meet these requirements. If you're curi
     </div>
 
   </Tab>
-  <Tab title="Gemma">
-    <div className="full-width">
-| Model    | Variant                                           | License |
-| -------- | ------------------------------------------------- | ------- |
-| Gemma 3n | [E2B](https://huggingface.co/google/gemma-3n-E2B) | gemma   |
-|          | [E4B](https://huggingface.co/google/gemma-3n-E4B) | gemma   |
-| Gemma 3  | [1 B](https://huggingface.co/google/gemma-3-1b)   | gemma   |
-|          | [4 B](https://huggingface.co/google/gemma-3-4b)   | gemma   |
-|          | [12 B](https://huggingface.co/google/gemma-3-12b) | gemma   |
-|          | [27 B](https://huggingface.co/google/gemma-3-27b) | gemma   |
-| Gemma 2  | [2 B](https://huggingface.co/google/gemma-2-2b)   | gemma   |
-|          | [9 B](https://huggingface.co/google/gemma-2-9b)   | gemma   |
-|          | [27 B](https://huggingface.co/google/gemma-2-27b) | gemma   |
 
-    </div>
-
-  </Tab>
   <Tab title="Mistral">
     <div className="full-width">
 | Model    | Variant                                                                   | License    |
@@ -119,6 +120,21 @@ Fortunately, the vast majority of models meet these requirements. If you're curi
 ## Base models
 
 <Tabs>
+  <Tab title="Gemma">
+    <div className="full-width">
+| Model   | Variant                                              | License       |
+| ------- | ---------------------------------------------------- | ------------- |
+| Gemma 3 | [1 B](https://huggingface.co/google/gemma-3-1b-pt)   | Gemma Licence |
+|         | [4 B](https://huggingface.co/google/gemma-3-4b-pt)   | Gemma Licence |
+|         | [12 B](https://huggingface.co/google/gemma-3-12b-pt) | Gemma Licence |
+|         | [27 B](https://huggingface.co/google/gemma-3-27b-pt) | Gemma Licence |
+| Gemma 2 | [2 B](https://huggingface.co/google/gemma-2-2b)      | Gemma Licence |
+|         | [9 B](https://huggingface.co/google/gemma-2-9b)      | Gemma Licence |
+|         | [27 B](https://huggingface.co/google/gemma-2-27b)    | Gemma Licence |
+
+    </div>
+
+  </Tab>
   <Tab title="Qwen">
     <div className="full-width">
 | Model | Variant | License |
@@ -176,21 +192,7 @@ Fortunately, the vast majority of models meet these requirements. If you're curi
     </div>
 
   </Tab>
-  <Tab title="Gemma">
-    <div className="full-width">
-| Model   | Variant                                              | License       |
-| ------- | ---------------------------------------------------- | ------------- |
-| Gemma 3 | [1 B](https://huggingface.co/google/gemma-3-1b-pt)   | Gemma Licence |
-|         | [4 B](https://huggingface.co/google/gemma-3-4b-pt)   | Gemma Licence |
-|         | [12 B](https://huggingface.co/google/gemma-3-12b-pt) | Gemma Licence |
-|         | [27 B](https://huggingface.co/google/gemma-3-27b-pt) | Gemma Licence |
-| Gemma 2 | [2 B](https://huggingface.co/google/gemma-2-2b)      | Gemma Licence |
-|         | [9 B](https://huggingface.co/google/gemma-2-9b)      | Gemma Licence |
-|         | [27 B](https://huggingface.co/google/gemma-2-27b)    | Gemma Licence |
 
-    </div>
-
-  </Tab>
   <Tab title="Mistral">
     <div className="full-width">
 | Model         | Variant                                                                     | License    |
