--- a/docs/getting-started/models.mdx
+++ b/docs/getting-started/models.mdx
@@ -117,7 +117,7 @@ Fortunately, the vast majority of models meet these requirements. If you're curi
   </Tab>
 </Tabs>
 
-## Base models
+## Pretrained models
 
 <Tabs>
   <Tab title="Gemma">
