--- a/docs/getting-started/models.mdx
+++ b/docs/getting-started/models.mdx
@@ -10,7 +10,7 @@ ART supports a wide variety of base models, with two constraining factors:
 1. For single-device fine-tuning, the base model (along with some reasonable amount of context) must be able to fit on a H100 in a quantized state.
 2. ART's dependencies (including Unsloth and vLLM) must support the model.
 
-Fortunately, the vast majority of models meet these requirements. If you're curious about a model that is not listed below, ask in the Discord #support channel.
+Fortunately, the vast majority of models meet these requirements. If you're curious about a model that is not listed below, ask in the Discord [#support](https://discord.com/channels/1359674493949448375/1359674622965973185) channel.
 
 ## Instruct models
 
