--- a/docs/getting-started/models.mdx
+++ b/docs/getting-started/models.mdx
@@ -9,8 +9,8 @@ icon: "robot"
   If you aren't sure which model to start with, we recommend using one of the
   [Qwen 2.5
   models](https://huggingface.co/collections/Qwen/qwen25-66e81a666513e518adb90d9e).
-  If you're looking for a good balance of performance and size, start with [Qwen
-  2.5 14B Instruct](https://huggingface.co/Qwen/Qwen2.5-14B-Instruct).
+  For a good balance of performance and size, start with [Qwen 2.5 14B
+  Instruct](https://huggingface.co/Qwen/Qwen2.5-14B-Instruct).
 </Info>
 
 ART supports a wide variety of base models, with two constraining factors:
